<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_user_photo" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_200"
            android:theme="@style/EditTextTheme"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editText_nomeUsuario_cadastro"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_200"
            android:theme="@style/EditTextTheme"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editText_senha_cadatro"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_200"
            android:theme="@style/EditTextTheme"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editText_confirmeSenha_cadatro"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_200"
            android:theme="@style/EditTextTheme"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>


    <CheckedTextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkMark="?android:attr/textCheckMark"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:checked="true"
        android:gravity="center_vertical"
        android:textColor="@color/White"
        android:text="@string/textView_novidades_email_cadastro" />




    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_login_button"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/White"
        android:textSize="20dp" />




</LinearLayout>