<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.AltaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEmAltaPage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Secundaria"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/titulo_toolbar_alta"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_melhoresDaSemana_emAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_semana_alta"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_melhoresDaSemana_EmAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cartaz" />

            <TextView
                android:id="@+id/title_emCartaz_EmAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_cartaz_alta"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_emCartaz_EmAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cartaz" />

            <TextView
                android:id="@+id/title_novosEpisodeos_EmAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_episodios_alta"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_novosEpisodeos_EmAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cartaz" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>